--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -1,26 +1,23 @@
-FROM python:3.8-alpine
+FROM python:3.9-slim-buster
 
 # set working directory
 WORKDIR /usr/src/app
 
-RUN apk add curl
-# #Download the desired package(s)
-RUN curl -O https://download.microsoft.com/download/e/4/e/e4e67866-dffd-428c-aac7-8d28ddafb39b/msodbcsql17_17.7.1.1-1_amd64.apk
-RUN curl -O https://download.microsoft.com/download/e/4/e/e4e67866-dffd-428c-aac7-8d28ddafb39b/mssql-tools_17.7.1.1-1_amd64.apk
-
-# #Install the package(s)
-RUN apk add --allow-untrusted msodbcsql17_17.7.1.1-1_amd64.apk
-RUN apk add --allow-untrusted mssql-tools_17.7.1.1-1_amd64.apk
+# install system dependencies
+RUN apt-get update \
+    && apt-get -y install gcc \
+    && apt-get -y install g++ \
+    && apt-get -y install unixodbc unixodbc-dev \
+    && apt-get clean
 
 # copy project file
 COPY requirements.txt .
 
 # install dependencies
-RUN apk add --update g++ unixodbc-dev
 RUN pip install -r requirements.txt
 
 # copy all project
 COPY . .
 
 # run test
-CMD sleep 60 && python ./test.py
+CMD sleep 30 && python ./test.py
