--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pytest
-pyodbc
+pyodbc >= 4.0.32, < 5.0.0
 
-pip_services3_commons >= 3.3.10, <=4.0
-pip_services3_components >= 3.5.4, <=4.0
-pip_services3_data >= 3.2.3, <=4.0
+pip_services3_commons >= 3.3.11, < 4.0
+pip_services3_components >= 3.5.5, < 4.0
+pip_services3_data >= 3.2.3, < 4.0
